[fix]: [CCM-10370]: Fixed currency symbol in email and slack (#42093)
* [fix]: [CCM-10370]: Fixed currency symbol in emails

* [fix]: [CCM-10370]: Handled currency symbol in slack

* [fix]: [CCM-10370]: Fixed Anomaly and Budget junit test cases

* [fix]: [CCM-10370]: Fixed constant variable userGroupIds syntax

* [fix]: [CCM-10370]: Fixed sonar issues